edited the home page to have buttons to bring to the separate search pages with a welcome message. Also edited the top padding of other pages so the title was no longer being covered by the navBar. Next will aim to update the form/buttons on each search page. (#20)
The background of the displayed results from API needs to be edited. Since switching to a space image those results are white background.

--- a/src/components/StarWarsFont.css
+++ b/src/components/StarWarsFont.css
@@ -28,3 +28,9 @@
     color: yellow;
      font-size: 50px;
 }
+.top-space {
+    padding-top: 40px;
+}
+.button-space {
+    padding: 10px;
+}
